--- a/index.html
+++ b/index.html
@@ -9,33 +9,31 @@
 </head>
 <body>
     <nav class="navbar">
-        <div class="nav">
-            <div class="container">
-                <div class="logo">Header logo</div>
-                <ul class="nav">
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ul>
-            </div>
-            </div>
-        <header class="header">
-            <div class="container">
-                <h1 class="website">This website is <br> awesome</h1>
-                <p>
-                    This website has some subtext that goes here under the <br>
-                    main title. It's a smaller font and the color is lower <br>
-                    contrast
-                </p>
-                <button class="button">Sign up</button>
-            </div>
-            <div class="container">
-                <div class="placeholder">
-                    this is a placeholder for an image
-                </div>
-            </div>
-        </header>
+        <div class="container">
+            <div class="logo">Header logo</div>
+            <ul class="nav">
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </nav>
+    <header class="header">
+        <div class="container">
+          <div class= "website">
+              <h1>This website is <br> awesome</h1>
+              <p>
+                This website has some subtext that goes here under the <br>
+                main title. It's a smaller font and the color is lower <br>
+                contrast
+              </p>
+              <button class="button">Sign up</button>
+          </div> 
+          <div class="placeholder">
+              this is a placeholder for an image
+          </div>
+        </div>
+    </header>
     <section class="section-one">
         <div class="container">
             <h2 class="information">
@@ -75,12 +73,12 @@
     </section>
     <section class="section-two">
         <div class="container">
-            <div class="quote">
+            <blockquote>
                 This is an inspiring quote, or a testimonial from a <br>
                 customer. Maybe it's just filling up space, or maybe <br>
                 people will actually read it. Who knows? All I know <br>
                 is that it looks nice.<br> <span class="quote-ref">-Thor, God of Thunder</span>
-            </div>
+            </blockquote>
         </div>
     </section>
     <section class="section-three">
